cmd/inspire-middleware/k8s/02-inspire-middleware.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inspire-middleware
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inspire-middleware
  template:
    metadata:
      labels:
        app: inspire-middleware
    spec:
      containers:
        - name: inspire-middleware
          image: uhub.service.ucloud.cn/entropypool/inspire-middleware:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/InspireMiddleware
      volumes:
        - name: service-config
          configMap:
            name: inspire-middleware-config
            items:
              - key: service-conf
                path: InspireMiddleware.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: inspire-middleware
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50400
      targetPort: 50400
    - name: grpc
      port: 50401
      targetPort: 50401
    - name: healthz
      port: 50402
      targetPort: 50402
    - name: prometheus
      port: 50403
      targetPort: 50403
  selector:
    app: inspire-middleware
